--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,10 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Publications
-    url: '#collection'
-    weight: 20
+# This link isn't working, drop it. 
+#  - name: Publications
+#    url: '#collection'
+#    weight: 20
   - name: Contact
     url: '#contact'
     weight: 30
